crates/kdl-config-derive/tests/ui/invalid_no_skip_serialize.stderr
error: expected boolean literal
 --> tests/ui/invalid_no_skip_serialize.rs:5:31
  |
5 |     #[kdl(no_skip_serialize = "yes")]
  |                               ^^^^^
